<resources>

    <string name="api_url">https://api.spaceflightnewsapi.net/v3/articles?_limit=%d&amp;_start=%d</string>

    <!-- SHARED PREFERENCES -->
    <string name="pref">SHARED_PREF_LIST</string>
    <string name="pref_save_login">SAVE_LOGIN</string>
    <string name="pref_seen_start">SEEN_START</string>
    <string name="pref_user_fullName">USER_FULL_NAME</string>
    <string name="pref_user_username">USER_USERNAME</string>
    <string name="pref_user_email">USER_EMAIL</string>
    <string name="pref_article_lastSeen">ARTICLE_LAST_ID</string>

    <!-- GLOBAL -->
    <string name="global_app_name">Space Reporter</string>
    <string name="global_poweredBy_txt">Powered by <a href="https://thespacedevs.com/llapi">Launch Library 2 API</a> and <a href="https://thespacedevs.com/snapi">Spaceflight News API</a></string>
    <string name="global_logoDesc">Application logo</string>
    <string name="global_noConn">No internet connection</string>

    <!-- NOTIFICATIONS -->
    <string name="notif_channel_newArticle_id">UNREAD_ARTICLES</string>
    <string name="notif_channel_newArticle_name">Unread articles</string>
    <string name="notif_channel_newArticle_desc">Channel for notifications about unread articles</string>
    <string name="notif_txt_newArticle_title">New unread articles!</string>
    <string name="notif_txt_newArticle_body">There are new articles to read since last time</string>

    <!-- SHARE -->
    <string name="share_body">Hey! I am using this application, and I think you should check it out too!\n\nLINK_TO_PLAYSTORE</string>

    <!-- NAVIGATION DRAWER -->
    <string name="nav_home">Home</string>
    <string name="nav_fav">Favorites</string>
    <string name="nav_later">Read later</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_communicate">Communicate</string>
    <string name="nav_share">Share</string>
    <string name="nav_rate">Rate app</string>
    <string name="nav_profile">Profile</string>
    <string name="nav_logout">Logout</string>
    <string name="nav_header_fullName">Upper text</string>
    <string name="nav_header_username">Middle text</string>
    <string name="nav_header_email">bottom.text@gmail.com</string>

    <!-- START -->
    <!-- TODO Add app description -->
    <string name="start_txt_appDescription">Text</string>
    <string name="start_btn_toLogin">To Login</string>

    <!-- LOGIN -->
    <string name="login_txt_remember">Stay logged?</string>
    <string name="login_txt_catchyLine">If you want to keep updated of the latest space news, this is your place!</string>
    <string name="login_btn_login">Login</string>
    <string name="login_btn_forgotPwd">Forgot Password?</string>
    <string name="login_btn_signUp">Sign Up</string>
    <string name="login_hint_email">Email</string>
    <string name="login_hint_password">Password</string>
    <string name="login_error_email">Invalid email</string>
    <string name="login_error_password">Invalid password</string>
    <string name="login_error_fail">Wrong email and/or password</string>
    <string name="login_error_unverifiedEmail">Email unverified</string>
    <string name="login_toast_success">Successful login</string>

    <!-- SIGNUP -->
    <string name="signUp_btn_signup">Sign Up</string>
    <string name="signUp_hint_fullName">Name</string>
    <string name="signUp_hint_username">Username</string>
    <string name="signUp_hint_email">Email</string>
    <string name="signUp_hint_password">Password</string>
    <string name="signUp_hint_confirmPassword">Repeat password</string>
    <string name="signUp_error_fullname">Invalid name</string>
    <string name="signUp_error_username">Invalid username</string>
    <string name="signUp_error_usernameUsed">Username already in use</string>
    <string name="signUp_error_email">Invalid email</string>
    <string name="signUp_error_password">Password longer than 8 characters, with one uppercase letter, one lowercase letter and one number</string>
    <string name="signUp_error_matchPassword">Passwords do not match</string>
    <string name="signUp_error_firebaseAuth">Email already in use</string>
    <string name="signUp_error_firebaseDatabase">Unexpected FirebaseDatabase error</string>
    <string name="signUp_error_verificationEmail">Error while sending verification email</string>
    <string name="signUp_toast_success">Account created</string>

    <!-- FORGOT PASSWORD -->
    <string name="forgotPwd_txt_explanation">Enter the email you used to sign up to receive the code to reset your password</string>
    <string name="forgotPwd_btn_send">Send email</string>
    <string name="forgotPwd_hint_email">Email</string>
    <string name="forgotPwd_error_invalidEmail">Invalid email</string>
    <string name="forgotPwd_error_emailUnregistered">No account with that email</string>
    <string name="forgotPwd_toast_sent">Email sent</string>

    <!-- HOME (fragment) -->
    <string name="home_desc_news">Access latest news</string>
    <string name="home_txt_news">News</string>
    <string name="home_txt_launches">Launches</string>

    <!-- NEWS -->
    <string name="news_toast_webView">Loading article on web browser…</string>
    <string name="news_toast_errorApi">Failed to get the data…</string>
    <string name="news_txt_titlePlaceholder">Sample text</string>
    <string name="popup_desc_fav">Add article to favorites list</string>
    <string name="popup_desc_readLater">Add article to read later list</string>
    <string name="popup_desc_webView">Go to the website with the full article</string>

</resources>