<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home_icon"
            android:title="@string/nav_home" />

        <item
            android:id="@+id/nav_fav"
            android:icon="@drawable/favorite_icon_filled"
            android:title="@string/nav_fav" />

        <item
            android:id="@+id/nav_readLater"
            android:icon="@drawable/readlater_icon_filled"
            android:title="@string/nav_later" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/settings_icon"
            android:title="@string/nav_settings" />

        <item
            android:id="@+id/nav_none"
            android:title=""
            android:visible="false" />

    </group>

    <item android:title="@string/nav_communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/share_icon"
                android:title="@string/nav_share" />

            <item
                android:id="@+id/nav_rate"
                android:icon="@drawable/rate_icon"
                android:title="@string/nav_rate" />
        </menu>
    </item>

    <item android:title="@string/nav_profile">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/logout_icon"
                android:title="@string/nav_logout" />
        </menu>
    </item>

</menu>