<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="32dp"
    android:orientation="vertical"
    android:padding="8dp"
    android:elevation="20dp"
    android:background="@color/white">

    <TextView
        android:id="@+id/popup_txt_title"
        style="@style/article_popup_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/news_txt_titlePlaceholder"/>

    <TextView
        android:id="@+id/popup_txt_summary"
        style="@style/article_popup_summary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/news_txt_titlePlaceholder"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        android:gravity="center">

        <androidx.appcompat.widget.AppCompatImageButton
            style="@style/article_popup_btns"
            android:id="@+id/popup_btn_readLater"
            android:src="@drawable/ic_baseline_read_later_24"
            android:contentDescription="@string/popup_desc_readLater"/>

        <androidx.appcompat.widget.AppCompatImageButton
            style="@style/article_popup_btns"
            android:id="@+id/popup_btn_fav"
            android:layout_marginStart="48dp"
            android:layout_marginEnd="48dp"
            android:src="@drawable/ic_baseline_favorite_border_24"
            android:contentDescription="@string/popup_desc_fav"/>

        <androidx.appcompat.widget.AppCompatImageButton
            style="@style/article_popup_btns"
            android:id="@+id/popup_btn_openWeb"
            android:src="@drawable/ic_baseline_web_24"
            android:contentDescription="@string/popup_desc_webView"/>

    </LinearLayout>

</LinearLayout>