<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="64dp"
    android:paddingBottom="64dp"
    tools:context=".spacereporter.ui.fragments.HomeFragment">

    <!-- TODO Implement more options based on API -->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.1">

            <ImageButton
                android:id="@+id/home_btn_news"
                style="@style/home_button"
                android:contentDescription="@string/home_desc_news"
                android:src="@drawable/news_icon" />

            <TextView
                style="@style/home_button_labels"
                android:text="@string/home_txt_news" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.8"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.1">

            <ImageButton
                android:id="@+id/home_btn_launches"
                style="@style/home_button"
                android:contentDescription="@string/home_txt_launches"
                android:src="@drawable/launches_icon" />

            <TextView
                style="@style/home_button_labels"
                android:text="@string/home_txt_launches" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>